--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Textutils is a utility which can be used to munipulate your text on way you want"
+      content="Textutils is a word counter and a character counting utility which can be used to munipulate your text on way you want, you can remove extra spaces copy the manipulated text as well as convert your text from uppercase to lowercase and uppercase to lowercase "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Textutils Home</title>
+    <title>Textutils -Word counter | Character counter | lowercase to uppercase  | uppercase to lowercase </title>
 
     <!-- bootstarp -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
